# ProjPortfolio

Decimal/src/: Makefile  output.c  s21_add.c  s21_big_decimal.c  s21_comparison.c  s21_decimal.h  s21_div.c  s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_mul.c  s21_other.c  s21_sign_and_pow.c  s21_sub.c  s21_support_func.c  test_s21_decimal.c
GameOfLife/: 1.txt  2.txt  3.txt  4.txt  5.txt  game_of_life.c
SimpleBashUtils/src/cat/: Makefile  cat.c  cat.h  cat_test.txt  s21_cat
SimpleBashUtils/src/grep/: Makefile  grep.c  grep.h  t1.txt
Stringplus/src/: CMakeLists.txt  Makefile  s21_insert.c  s21_memchr.c  s21_memcmp.c  s21_memcpy.c  s21_memset.c  s21_sprintf.c  s21_sprintf.h  s21_strchr.c  s21_strcspn.c  s21_strerror.c  s21_string.h  s21_strlen.c  s21_strncat.c  s21_strncmp.c  s21_strncpy.c  s21_strpbrk.c  s21_strrchr.c  s21_strstr.c  s21_strtok.c  s21_to_lower.c  s21_to_upper.c  s21_trim.c
